--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,61 @@
-*{
-  font-size: 20px;
-  box-sizing: border-box;
-}
-  body{
-color:#000000;
-background-color:	#5dac30;
+
+*{  
+  font-size: 28px; 
+  box-sizing: border-box; 
+  margin: 0; 
+  padding: 0; 
 }
 
-nav{
-background-color: #467619;
-border: 6px solid #000000;
-}
-nav div {
-border: 2px solid #000000;
-background-color: rgba(30, 212, 79, 0.47);
-}
-ul{
-  list-style-type: disc;  
+body{
+  background-color:	#5dac30;
 }
 
+.page-nav {
+  display: flex;
+  flex-direction: column; /* По умолчанию колонкой */
+  width: 100%;
+  border: 6px solid #0a3e0e;
+  background-color: rgba(30, 212, 79, 0.47);
+  text-align: center;
+  position: static;
+}
+
+.page-nav li {
+  display: flex;
+  margin: 5px 30px 5px 25px;
+  width: 100%;
+  background-color: #467619;
+  padding: 10px;
+  border: 2px solid #000000;
+}
+
+.table{
+  text-align: center;
+  border: 5px solid #0a3e0e;
+  background-color:rgba(115, 255, 93, 0.47);
+  width:100%;
+}
+
+table{
+  text-align: center;
+  width:100%;
+  border-collapse: collapse;
+  background-color:rgba(115, 255, 93, 0.47);
+    
+}
+
+tr:nth-child(even){
+  background-color: #f4511f;
+}
+
+.row  {
+  border: 5px solid #0a3e0e;
+  background-color:rgba(115, 255, 93, 0.47);
+  display: flex;
+  flex-direction: column;
+	text-align: center;
+  width:100%;
+}
 
 a{
   display: block;
@@ -26,65 +63,32 @@ a{
 }
 
 a:hover{
-  text-decoration: overline;
-}
-.table{
-  border-collapse: collapse;
-  border: 3px solid black;
-  background-color: #72df33;
-  
-}
-th, td{
-  border: 1px solid black;
-}
-.form{
-  background-color: aquamarine;
-  border: 1px solid black;
-}
-input, select, textarea{
-  border: 1px solid#e5e5e5;
-}
-input[type=submit],[type=radio], [type=date]{
-  cursor: pointer;
-}
-input[type=submit]{
-  background-color: rgb(255, 255, 255);
-}
-
-header{
-  background-color: rgb(99, 194, 48);
-border-bottom: 5px solid #000000;
-}
-.slist {
-background-color: rgb(140, 239, 232);
-border: 5px solid #000000;
-}
-
-img {
-  border: 6px solid #000000;
-  border-radius: 16px;
+  text-decoration:line-through;
 }
 
 
-.circle-image{
-  display: inline-block;
-  border-radius: 50%;
-  overflow: hidden;
-  width: 100px;
-  height: 100px;
-  border: 6px solid #000000;
-  margin-top:0px;
-  margin-left:-230px;
-}
+@media screen and (orientation:landscape) {
+  .page-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; 
+  }
 
-tr:nth-child(even){
-  background-color: #f4511f;
+  .page-nav li {
+    width: 230px;
+    display:inline-block;
+  }
+
+  .container {
+    max-width: 900px;
+  }
+  *{
+    font-size: 20px; 
+  }
 }
-.footer{
-  border: 6px solid #000000;
-  background-color: rgb(153, 255, 0);
-}
-.link {
-background-color: rgb(70, 174, 77);
-border: 5px solid #000000;
+.footer {
+  background-color: #f5f5f5;
+  padding: 20px;
+  text-align:left;
+  width: 100%;
 }
