--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,17 @@ body{
 
 .page-nav {
   display: flex;
-  flex-direction: column; /* По умолчанию колонкой */
+  flex-direction: column;
   width: 100%;
   border: 6px solid #0a3e0e;
   background-color: rgba(30, 212, 79, 0.47);
   text-align: center;
-  position: static;
+  transform: translate(-28svh);
 }
 
 .page-nav li {
   display: flex;
+  flex-direction: column;
   margin: 5px 30px 5px 25px;
   width: 100%;
   background-color: #467619;
@@ -44,11 +45,16 @@ table{
     
 }
 
+.container {
+  width: 100%;
+}
+
 tr:nth-child(even){
   background-color: #f4511f;
 }
 
 .row  {
+  margin-top: 15%;
   border: 5px solid #0a3e0e;
   background-color:rgba(115, 255, 93, 0.47);
   display: flex;
@@ -67,10 +73,11 @@ a:hover{
 }
 
 
+/* Применяем стили для широких экранов */
 @media screen and (orientation:landscape) {
   .page-nav {
     display: flex;
-    flex-direction: row;
+    flex-direction: row; /* Отображение в виде строки */
     justify-content: center; 
   }
 
@@ -80,15 +87,15 @@ a:hover{
   }
 
   .container {
-    max-width: 900px;
+    width: 900px;
   }
   *{
-    font-size: 20px; 
+    font-size: 20px;
   }
 }
 .footer {
   background-color: #f5f5f5;
   padding: 20px;
   text-align:left;
-  width: 100%;
+  width: 100%; /* Занимает всю доступную ширину */
 }
